--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,14 @@
         "default_popup": "hello.html",
         "default_icon": "hello_extensions.png"
     },
-    "permissions": ["activeTab", "declarativeContent", "storage"],
+    "permissions": [
+        "activeTab",
+        "declarativeContent",
+        "storage",
+        "tabs",
+        "<all_urls>"
+        //        "webview"
+    ],
 
 
     "background": {
