--- a/manifest.json
+++ b/manifest.json
@@ -1,35 +1,34 @@
 {
-    "name": "Getting Started Example",
-    "version": "1.0",
-    "description": "Build an Extension!",
-    "manifest_version": 2,
-    "browser_action": {
-        "default_popup": "hello.html",
-        "default_icon": "hello_extensions.png"
-    },
-    "permissions": [
-        "activeTab",
-        "declarativeContent",
-        "storage",
-        "tabs",
-        "<all_urls>"
-        //        "webview"
+  "name": "Dynamic Paths",
+  "version": "1.0",
+  "description": "Get fast with your urls.",
+  "manifest_version": 2,
+  "browser_action": {
+    "default_popup": "index.html",
+    "default_icon": "hello_extensions.png"
+  },
+  "permissions": [
+    "activeTab",
+    "declarativeContent",
+    "storage",
+    "tabs",
+    "<all_urls>"
+    //        "webview"
+  ],
+  "background": {
+    "scripts": [
+      "background.js"
     ],
-
-
-    "background": {
-        "scripts": [
-            "background.js"
-        ],
-        "persistent": false
-    },
-    "commands": {
-        "_execute_browser_action": {
-            "suggested_key": {
-                "default": "Ctrl+Shift+F",
-                "mac": "MacCtrl+Shift+F"
-            },
-            "description": "Opens hello.html"
-        }
+    "persistent": false
+  },
+  "content_security_policy": "script-src 'self' https://cdn.jsdelivr.net; object-src 'self'",
+  "commands": {
+    "_execute_browser_action": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+F",
+        "mac": "MacCtrl+Shift+F"
+      },
+      "description": "Opens index.html"
     }
+  }
 }
