--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Dynamic Paths",
+  "name": "Dynamit",
   "version": "1.0",
   "description": "Get fast with your urls.",
   "manifest_version": 2,
@@ -17,7 +17,6 @@
     "storage",
     "tabs",
     "<all_urls>"
-    //        "webview"
   ],
   "background": {
     "scripts": [
@@ -31,7 +30,7 @@
         "default": "Ctrl+Shift+F",
         "mac": "MacCtrl+Shift+F"
       },
-      "description": "Opens Dynamic Paths window"
+      "description": "Opens app window"
     }
   }
 }
